# efficientAI

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  add_integration_public_key.py  add_name_column.sql  add_name_column_script.py  apply_migration_016.py  apply_migration_017.py  check_db_connection.py  check_dependencies.py  config.docker.worker.yml  config.docker.yml  config.yml.example  docker-compose.keycloak.yml  docker-compose.observability.yml  docker-compose.yml  env.example  fix_phone_number.sql  fix_phone_number_constraint.py  fix_phone_number_nullable.py  funding.json  package-lock.json  package.json  pyproject.toml
.cursor/plans/: provider_prompt_sync_4064b2be.plan.md
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: backend-tests-postgres.yml  deploy-docs.yml  docker-build-check.yml  docker-publish.yml  docs-quality.yml  docs.yml  pr-dev-images.yml  pr-label-semver-release.yml  release-and-publish.yml
EfficientAI-Docs/: docusaurus.config.js  package-lock.json  package.json
EfficientAI-Docs/docs/: intro.md  pricing.md
app/: __init__.py  cli.py  config.py  database.py  dependencies.py  main.py
app/config/: models.json  murf_falcon_voices.json  murf_gen2_voices.json  voicemaker_voices.json
app/core/: __init__.py  encryption.py  exceptions.py  health.py  license.py  migration_middleware.py  migrations.py  observability_middleware.py  operational_access_middleware.py  password.py  rbac_middleware.py  security.py  security_headers_middleware.py
app/migrations/: 001_add_default_agent_to_org_member.py  002_add_evaluator_result_id_to_call_recordings.py  003_add_tts_comparison_tables.py  003_make_voice_bundle_id_nullable_on_test_conversations.py  004_add_num_runs_and_run_index.py  005_add_simulation_id_to_tts_comparisons.py  006_add_side_to_tts_samples.py  007_add_custom_tts_voices_table.py  008_make_tts_provider_b_optional.py  009_add_ttfb_ms_to_tts_samples.py  010_add_prompt_partials_tables.py  011_add_tts_report_jobs_table.py  012_add_agent_link_to_scenarios.py  013_add_voice_playground_threshold_overrides_to_organizations.py  014_cleanup_provider_evaluator_speaker_segments.py  015_add_eval_stt_columns_to_tts_comparisons.py  015_add_prompt_optimization_tables.py  016_add_plivo_telephony_tables.py  016_add_provider_prompt_to_agents.py  017_rename_plivo_to_telephony.py  017_revamp_personas_tts_fields.py  018_add_auth_columns_to_users.py  018_add_s2s_support_to_voicebundles.py  018_add_telephony_link_to_agents.py  019_add_telephony_tables.py  019_make_evaluator_result_fields_optional.py  020_add_call_event_to_call_recordings.py  020_add_telephony_link_to_agents.py  021_add_metric_origin_and_surfaces_to_metrics.py  021_add_source_to_call_recordings.py  022_add_deepgram_to_integrationplatform.py  022_add_tags_to_metrics.py  023_add_blind_test_share_tables.py  023_add_cartesia_to_integrationplatform.py  024_add_call_import_tables.py  024_add_deepgram_cartesia_to_modelprovider.py  025_add_call_tracking_to_evaluator_results.py  025_make_recording_url_nullable.py  026_add_provider_platform_call_data_to_evaluator_results.py  026_voice_playground_dual_flow.py  (+57 more)
app/models/: __init__.py  database.py  enums.py  schemas.py
app/services/: agent_flowchart.py  alert_evaluation_service.py  alert_notification_service.py  audio_service.py  call_import_metric_clusters.py  call_import_prompt_improvements.py  call_import_user_insights.py  evaluation_service.py  imported_agent_constants.py  llm_service.py  metric_clusters_rca_summary.py  metric_failure_policy.py  metric_partial_constants.py  metric_partial_validation.py  metrics_service.py  model_config_service.py  organization_provisioning.py  qualitative_voice_service.py  s3_service.py  storage_service.py  test_agent_bridge_service.py  test_agent_service.py  transcription_service.py  tts_service.py  voice_playground_report_service.py  voice_quality_service.py  workspace_rbac.py
app/utils/: __init__.py  call_recordings.py
app/workers/: __init__.py  celery_app.py  config.py
docker/: Dockerfile.api  Dockerfile.worker
docker/keycloak/: efficientai-realm.json
docs/: api-reference.md  architecture.md  getting-started.md  one-pager.md  test-agent-bridge-architecture.md
docs-fumadocs/: .gitignore  CUTOVER.md  README.md  local-enterprise-gate-preview.cjs  next.config.mjs  package-lock.json  package.json
docs-fumadocs/app/: global.css  layout.tsx
docs-fumadocs/components/: contributors.tsx  docs-action-link.tsx  docs-provider.tsx  docs-search-dialog.tsx  enterprise-unlock-form.tsx  logo.tsx  mdx.tsx  toc-header-controls.tsx
docs-fumadocs/content/: contributor-profiles.json  feature-contributors.json  feature-owners.json
docs-fumadocs/lib/: layout.shared.tsx  shared.ts  source.ts
docs-fumadocs/public/: search-index.json
docs-fumadocs/scripts/: check-links.mjs  generate-contributors.mjs  generate-search-index.mjs  validate-docs.mjs
docs/product/: evaluators.md  metrics.md
enterprise/: LICENSE.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  (+2 more)
migrations/: 001_add_organizations.py  002_add_iam.py  003_add_integrations.py  004_add_voicebundles.py  005_add_aiproviders.py  006_add_manual_transcriptions.py  007_add_name_to_manual_transcriptions.py  008_add_test_agent_conversations.py  009_add_conversation_evaluations.py  010_add_evaluators.py  011_add_metrics.py  012_add_agent_voice_config.py  013_add_evaluator_results.py  014_update_evaluator_result_status.py  015_add_speaker_segments_to_evaluator_results.py  016_add_first_last_name_to_users.py  README.md
scripts/: check_migrations.py  create_api_key.py  generate_er_diagram_simple.py  init_db.py  remove_legacy_flexprice_meter.py  setup_flexprice_meters.py  test_ws_echo.py
tests/: conftest.py
(+928 files in other folders)
