[project]
name = "efficientai"
version = "0.1.0"
description = "Voice AI Evaluation Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "aiofiles>=23.2.0",
    "boto3>=1.34.0",
    "cartesia>=0.1.0",
    "deepgram-sdk>=3.0.0,<4.0.0",
    "loguru>=0.7.0",
    "retell-sdk>=0.1.0",
    "livekit>=0.11.0",
    "daily-python>=0.10.0",
    "aiortc>=1.6.0",
    "av>=10.0.0",
    "croniter>=2.0.0",
    "pytz>=2024.1",
    "jiwer>=3.0.0",
    "litellm>=1.60.0,<=1.82.6",
    "jinja2>=3.1.0",
    "wait-for2>=0.4.0",
    "docstring-parser>=0.15",
    "pyloudnorm>=0.1.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pillow>=10.0.0",
    "protobuf>=4.25.0",
    "requests>=2.31.0",
    "nltk>=3.8.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "huggingface-hub>=0.20.0",
    "soxr>=0.3.0",
    "typing-extensions>=4.9.0",
    "onnxruntime>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
local-smart-turn-v3 = [
    "transformers>=4.41.0",
    "onnxruntime>=1.17.0",
    "importlib-resources>=6.4.0",
]
cartesia = [
    "cartesia>=0.1.0",
    "websockets>=12.0",
]
deepgram = [
    "deepgram-sdk>=3.0.0,<4.0.0",
]
# Local Whisper transcription (requires PyTorch) - use OpenAI API instead for lighter install
local-whisper = [
    "openai-whisper>=20231117",
]
# PDF report generation
reports = [
    "weasyprint>=62.0",
]
# Qualitative Voice AI Metrics (MOS, Emotion, Prosody) + Speaker Diarization
qualitative-voice = [
    "torch>=2.0.0",
    "torchaudio>=2.1.0",
    "transformers>=4.41.0",
    "librosa>=0.10.0",
    "imageio-ffmpeg>=0.5.1",
    "scipy>=1.11.0",
    "pyannote.audio>=3.1.0",
    "praat-parselmouth>=0.4.3",
]
# NVIDIA NeMo ASR for TTS hallucination detection (WER/CER via Conformer CTC)
nemo-asr = [
    "nemo_toolkit[asr]>=1.20.0",
]
sarvam = [
    "sarvamai>=0.1.0",
]
# Google AI services (Gemini, Cloud TTS, Cloud Speech)
google = [
    "google-genai>=1.0.0",
    "google-cloud-texttospeech>=2.16.0",
    "google-cloud-speech>=2.26.0",
]
# GEPA prompt optimization (enterprise feature)
gepa = [
    "gepa",
    "dspy",
]
# Optional: Speaker Consistency metric (has version conflicts with torchaudio)
# speechbrain = ["speechbrain>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
force-include = { "src/efficientai" = "efficientai" }

[tool.hatch.build.targets.wheel]
packages = ["app", "efficientai"]

[project.scripts]
eai = "app.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

